--- a/src/main/java/com/itheima/datastructure/binarytree/深度遍历.md
+++ b/src/main/java/com/itheima/datastructure/binarytree/深度遍历.md
@@ -15,6 +15,12 @@ class Solution {
 ```
 ## 栈
 
+- 一个栈，先不压入root
+- 循环条件：cur非空、栈不空
+- 当前非空，则处理当前的左子树：压栈、前序、更新至最左。
+- 当前树空，则看**栈顶元素的右子树**。没有右子树和右子树已经是pop，则弹栈更新pop；否则当前为右子树。
+- 前序是压入cur.val，中序是压入peek.val，后序是压入更新后的pop.val。
+
 ```java
 class Solution {
     public List<Integer> preorderTraversal(TreeNode root) {
@@ -68,6 +74,31 @@ class Solution {
                 TreeNode pop = stack.pop();
                 res.add(pop.val);       // <<<<<<<< 中
                 cur = pop.right;
+            }
+        }
+        return res;
+    }
+}
+```
+```java
+// 后序遍历
+class Solution {
+    public List<Integer> postorderTraversal(TreeNode root) {
+        List<Integer> res = new LinkedList<>();
+        LinkedList<TreeNode> s = new LinkedList<>();
+        TreeNode cur = root, pop = null;
+        while (cur != null || !s.isEmpty()) {
+            if (cur != null) {
+                s.push(cur);
+                cur = cur.left;
+            } else {
+                TreeNode peek = s.peek();
+                if (peek.right == null || peek.right == pop) {
+                    pop = s.poll();
+                    res.add(pop.val);
+                } else {
+                    cur = peek.right;
+                }
             }
         }
         return res;
