--- a/src/main/java/com/itheima/algorithm/sort/排序.md
+++ b/src/main/java/com/itheima/algorithm/sort/排序.md
@@ -8,17 +8,14 @@
 
 ## 1. 冒泡排序
 
+[bubbleSortBasic](./BubbleSort.java)
+
 ### 1.1. 基础版 bubbleSortBasic
-```
-value: 4, 5, 3, 2, 1
-index: 0  1  2  3  4
 
-第一轮：(0,1), (1,2), (2,3), (3,4)  索引4是最大值，已排序
-第二轮：(0,1), (1,2), (2,3) 索引3是次大值，已排序
-第三轮：(0,1), (1,2)
-第四轮：(0,1)
-```
+* 每轮冒泡不断地比较**相邻**的两个元素，如果它们是逆序的，则交换它们的位置
+* 下一轮冒泡，可以调整未排序的右边界，减少不必要比较
 
+j是实际元素的索引`a[j+1]`，i是j的边界。
 ```java
 for (int i = a.length - 1; i > 0; i--) {
     for (int j = 0; j < i; j++) {
@@ -29,11 +26,15 @@ for (int i = a.length - 1; i > 0; i--) {
 index: 0   1   2   3   4
 ```
 
-核心是关注 `a[j]`。
+```
+value: 4, 5, 3, 2, 1
+index: 0  1  2  3  4
 
-看第二层循环：交换`a[j]`和`a[j+1]`：j 从 0 开始，最大是 length - 2处。
-- 平时遍历数组是最后一个元素索引的`j = length -1`的`for(int j = 0; j < length; j++)`，那么现在就是`j = length -2`的`j < length - 1`。那么传递到外层循环，就是`i = length - 1`
-- 最后一轮是 `a[0]`和 `a[1]`比较，那么内层循环就是`for(int j = 0; j < 1; ...)`，传递到外层就是`i = 1`的`for (...; i > 0;... )`
+第一轮：(0,1), (1,2), (2,3), (3,4)  索引4是最大值，已排序
+第二轮：(0,1), (1,2), (2,3) 索引3是次大值，已排序
+第三轮：(0,1), (1,2)
+第四轮：(0,1)
+```
 
 ### 1.2. 改进版 bubbleSortX
 
