--- a/src/main/java/com/itheima/datastructure/hashtable/819最常见的单词.md
+++ b/src/main/java/com/itheima/datastructure/hashtable/819最常见的单词.md
@@ -1,3 +1,36 @@
+
+1. 将 paragraph 截取为一个个单词
+2. 将单词加入 map 集合，单词本身作为 key，出现次数作为 value
+3. 将 banned 中的单词从 map 集合中移除
+4. 在 map 集合中找到 value 最大的，返回它对应的 key 即可
+```java
+class Solution {
+    public String mostCommonWord(String paragraph, String[] banned) {
+        String[] strs = paragraph.toLowerCase().split("[^a-z]+");
+        System.out.println();
+        HashMap<String, Integer> m = new HashMap<>();
+        for(String str: strs){
+            m.compute(str, (k,v) -> v==null?1:v+1);
+        }
+        for(String ban: banned){
+            m.remove(ban);
+        }
+        int v = 0;
+        String k = null;
+        Set<String> keySet = m.keySet();
+        for(String key: keySet){
+            Integer value = m.get(key);
+            if(value > v){
+                v = value;
+                k = key;
+            }
+        }
+        return k;
+    }
+}
+```
+
+```java
 package com.itheima.datastructure.hashtable;
 
 import java.util.HashMap;
@@ -11,9 +44,7 @@ import java.util.Set;
  */
 public class E08Leetcode819 {
     /*
-        1. 将 paragraph 截取为一个个单词
-        2. 将单词加入 map 集合，单词本身作为 key，出现次数作为 value，避免禁用词加入
-        3. 在 map 集合中找到 value 最大的，返回它对应的 key 即可
+
      */
     public String mostCommonWord1(String paragraph, String[] banned) { // 14ms
         String[] split = paragraph.toLowerCase().split("[^A-Za-z]+");
@@ -50,8 +81,6 @@ public class E08Leetcode819 {
     }
 
     public String mostCommonWord(String paragraph, String[] banned) { // 4ms
-        // bob hit a ball, ...
-        // bob
         Set<String> set = Set.of(banned);
         HashMap<String, Integer> map = new HashMap<>();
         char[] chars = paragraph.toLowerCase().toCharArray();
@@ -64,7 +93,6 @@ public class E08Leetcode819 {
                 if (!set.contains(key)) {
                     map.compute(key, (k, v) -> v == null ? 1 : v + 1);
                 }
-//                sb = new StringBuilder();
                 sb.setLength(0);
             }
         }
@@ -95,3 +123,4 @@ public class E08Leetcode819 {
         System.out.println(key); // ball
     }
 }
+```
