--- a/src/main/java/com/itheima/datastructure/heap/1.md
+++ b/src/main/java/com/itheima/datastructure/heap/1.md
@@ -6,7 +6,7 @@
 
 堆使用的是**完全二叉树**，特征：
 * 如果从索引 0 开始存储节点数据
-  * 节点 $i$ 的父节点为 $floor((i-1)/2)$
+  * 节点 $i$ 的父节点为 $\lfloor((i-1)/2)\rfloor$
   * 节点 $i$ 的左子节点为 $2i+1$，右子节点为 $2i+2$
   * 非叶子节点范围为 $[0, size/2-1]$
 
@@ -30,12 +30,12 @@ $n*\log n$。n次循环 * logn的插入排序
 ### 下潜
 
 1. parent自身和左右孩子left,right，选出最大值的索引为max
-2. 如果max为孩子，那么交换parent和max，以max为递归再下潜。
+2. 如果max为孩子，那么交换parent和max，以max为parent递归再下潜。
 
 ### 出堆顶
 
-1. 交换堆顶和最后一个叶子元素
-2. size--，表示删除叶子。
+1. 交换堆顶和最后一个元素
+2. size--，表示删除元素。
 3. 重新下潜堆顶
 
 ### 添加元素
