--- a/src/main/java/com/itheima/algorithm/sort/排序.md
+++ b/src/main/java/com/itheima/algorithm/sort/排序.md
@@ -1,9 +1,14 @@
 - [1. 冒泡排序](#1-冒泡排序)
   - [1.1. 基础版 bubbleSortBasic](#11-基础版-bubblesortbasic)
   - [1.2. 改进版 bubbleSortX](#12-改进版-bubblesortx)
-- [选择排序](#选择排序)
-- [堆排序](#堆排序)
-- [2. 插入排序](#2-插入排序)
+- [2. 选择排序](#2-选择排序)
+- [3. 堆排序](#3-堆排序)
+- [4. 插入排序](#4-插入排序)
+- [5. 希尔排序](#5-希尔排序)
+- [归并排序](#归并排序)
+  - [递归：自顶向下](#递归自顶向下)
+  - [非递归实现：自底向上](#非递归实现自底向上)
+  - [递归实现+元素少时插入排序](#递归实现元素少时插入排序)
 
 
 ---
@@ -15,6 +20,18 @@ public void swap(int[] nums, int i, int j) {
     nums[i] = nums[i] ^ nums[j];
 }
 ```
+
+
+| 算法 |    最好    |    最坏    |    平均    |  空间   | 稳定 | 思想 |                           注意事项                           | 速度| 优化|
+| :--: | :--------: | :--------: | :--------: | :-----: | :--: | :--: | :----------------------------------------------------------: | :-:| :-:|
+| 冒泡 |    O(n)    |  O($n^2$)  |  O($n^2$)  |  O(1)   |  Y   | 比较 |  最好情况需要优化版本，而且是已经有序的数组 | 慢| x记录最后一次交换位置|
+| 选择 |  O($n^2$)  |  O($n^2$)  |  O($n^2$)  |  O(1)   |  N   | 比较 |交换次数一般少于冒泡                     | 慢|
+|  堆  | O($nlogn$) | O($nlogn$) | O($nlogn$) |  O(1)   |  N   | 选择 |                                 | 快|非递归下潜|
+| 插入 |    O(n)    |  O($n^2$)  |  O($n^2$)  |  O(1)   |  Y   | 比较 |最好情况是已经有序的数组                   | 慢|优化就是希尔排序|
+| 希尔 |  O(nlogn)  |  O($n^2$)  | O($nlogn$) |  O(1)   |  N   | 插入 |                                 | 比堆排序还快| |
+| 归并 | O($nlogn$) | O($nlogn$) | O($nlogn$) |  O(n)   |  Y   | 分治 |需要额外的O(n)的存储空间 |比希尔排序还快||
+| 快速 | O($nlogn$) |  O($n^2$)  | O($nlogn$) | O(logn) |  N   | 分治 | 需要把枢轴值随机化来缓解最坏情况 ||
+
 ## 1. 冒泡排序
 
 [bubbleSortBasic](./BubbleSort.java)
@@ -102,7 +119,7 @@ public void sort(int[] nums, int i) {
     sort(nums, x);
 }
 ```
-## 选择排序
+## 2. 选择排序
 
 每一轮选择，找出最大（最小）的元素，并把它交换到合适的位置
 
@@ -132,7 +149,7 @@ public int[] sortArray(int[] nums) {
     return nums;
 }
 ```
-## 堆排序
+## 3. 堆排序
 
 1. 建大顶堆
 2. 出堆顶直到剩一个。
@@ -200,7 +217,7 @@ public void down(int[] nums, int parent, int size) {
 }
 ```
 
-## 2. 插入排序
+## 4. 插入排序
 
 - 将数组分为已排序部分和未排序部分：`[0 .. low-1]`  `[low .. a.length-1]`(优化：第一个不用排：low=1开始)
 - 每次从未排序区域取出low下标的元素, 插入到已排序区域
@@ -212,7 +229,8 @@ public int[] sortArray(int[] nums) {
         // 因为会覆盖 low下标的元素，所以要保存到临时变量
         int t = nums[low];
         int i = low - 1;
-        while (i >= 0 && nums[i] > t) { // >= 就是不稳定了
+        // nums[i] > t 就是不稳定了
+        while (i >= 0 && nums[i] > t) { 
             nums[i + 1] = nums[i];
             i--;
         }
@@ -260,5 +278,206 @@ public static void recursion(int[] a, int low) {
         a[i + 1] = l;
     }
     recursion(a, low + 1);
+}
+```
+
+## 5. 希尔排序
+
+插入排序改进：插入排序如果第一个元素是9，那么它要被移动n次；而希尔排序从大gap往小gap走，移动9的步幅很大，$\log_2 n$就足以。
+
+
+* 根据步幅gap实现分组的插入排序
+* 每轮排序后 gap 逐渐变小，直至 gap 为 1 完成排序 
+
+![alt text](../../../../../../../images/image-36.png)
+```java
+public int[] sortArray(int[] nums) {
+    // gap 不断除2，直到1
+    for (int gap = nums.length / 2; gap > 0; gap /= 2) {
+        // 1替换为gap
+        for (int low = gap; low < nums.length; low++) {
+            int t = nums[low];
+            int i = low - gap;
+            while (i >= 0 && nums[i] > t) {
+                nums[i + gap] = nums[i];
+                i -= gap;
+            }
+            if (i != low - gap) {
+                nums[i + gap] = t;
+            }
+        }
+    }
+    return nums;
+}
+```
+
+## 归并排序
+
+### 递归：自顶向下
+
+```
+[5,1,1,2,0,0]
+[5,1,1] [2,0,0]     // 而自底向上是 [5,1] [1,2] [0,0]
+[5,1] [1] [2,0] [0]
+[5] [1] [1] [2] [0] [0]
+```
+```java
+public int[] sortArray(int[] nums) {
+    int[] t_arr = new int[nums.length];
+    split(nums, 0, nums.length - 1, t_arr);
+    return nums;
+}
+
+public void split(int[] nums, int left, int right, int[] t_arr) {
+    if (left == right) {
+        return;
+    }
+    // 分
+    int m = (left + right) >>> 1;
+    split(nums, left, m, t_arr);
+    split(nums, m + 1, right, t_arr);
+    // 并：结果存到临时数组里
+    merge(nums, left, m, m + 1, right, t_arr);
+    // 将临时数组里的结果拷回原数组
+    System.arraycopy(t_arr, left, nums, left, right - left + 1);
+}
+
+public void merge(int[] nums, int iLeft, int iRight, int jLeft, int jRight, int[] t_arr) {
+    int k = iLeft;  // 0在递归中可以，但为了和非递归保持一致。
+    while (iLeft <= iRight && jLeft <= jRight) {
+        if (nums[iLeft] < nums[jLeft]) {
+            t_arr[k] = nums[iLeft];
+            iLeft++;
+        } else {
+            t_arr[k] = nums[jLeft];
+            jLeft++;
+        }
+        k++;
+    }
+    if (iLeft <= iRight) {
+        System.arraycopy(nums, iLeft, t_arr, k, iRight - iLeft + 1);
+    } else {
+        System.arraycopy(nums, jLeft, t_arr, k, jRight - jLeft + 1);
+    }
+}
+```
+
+### 非递归实现：自底向上
+
+```
+[5,1,1,2,0,0]
+[5,1] [1,2] [0,0]   
+[5,1,1,2] [0,0]     // 而自顶向下是 [5,1,1] [2,0,0]
+[5,1,1,2,0,0]   
+```
+```java
+public int[] sortArray(int[] nums) {
+    int[] t_arr = new int[nums.length];
+    split(nums, t_arr);
+    return nums;
+}
+
+public void split(int[] nums, int[] t_arr) {
+    int length = nums.length;
+    // 宽度2，不断膨胀，直到一半能完全盖住数组前（要让左右还有的比较，不能让左边取完数组）
+    for (int width = 2; width / 2 < length; width *= 2) {
+        for (int left = 0; left < length; left += width) {
+            int right = left + width - 1;
+            int m = Math.min((left + right) >>> 1, length - 1);
+            right = Math.min(right, length - 1);
+            merge(nums, left, m, m + 1, right, t_arr);
+        }
+        System.arraycopy(t_arr, 0, nums, 0, length);
+    }
+}
+
+public void merge(int[] nums, int iLeft, int iRight, int jLeft, int jRight, int[] t_arr) {
+    int k = iLeft;
+    while (iLeft <= iRight && jLeft <= jRight) {
+        if (nums[iLeft] < nums[jLeft]) {
+            t_arr[k] = nums[iLeft];
+            iLeft++;
+        } else {
+            t_arr[k] = nums[jLeft];
+            jLeft++;
+        }
+        k++;
+    }
+    if (iLeft <= iRight) {
+        System.arraycopy(nums, iLeft, t_arr, k, iRight - iLeft + 1);
+    } else {
+        System.arraycopy(nums, jLeft, t_arr, k, jRight - jLeft + 1);
+    }
+}
+```
+
+### 递归实现+元素少时插入排序
+
+元素少时插入排序，是在分裂中，而不是一开始判断数组用归并还是分裂。
+
+```java
+class Solution {
+    public int[] sortArray(int[] nums) {
+        int[] t_arr = new int[nums.length];
+        split(nums, 0, nums.length - 1, t_arr);
+        return nums;
+    }
+
+    public void insertion(int[] nums, int left, int right){
+        for(int low = left + 1; low <= right; low++){
+            int t = nums[low];
+            int i = low - 1;
+            while(i >= left && nums[i] > t){
+                nums[i + 1] = nums[i];
+                i--;
+            }
+            if(i != low -1){
+                nums[i + 1] = t;
+            }
+        }
+    }
+
+    public void split(int[] nums, int left, int right, int[] t_arr) {
+        if (left == right) {
+            return;
+        }
+        else if (right - left <= 32) {
+            insertion(nums, left, right);
+            return;
+        }
+        // 分
+        int m = (left + right) >>> 1;
+        split(nums, left, m, t_arr);
+        split(nums, m + 1, right, t_arr);
+        // 并：结果存到临时数组里
+        merge(nums, left, m, m + 1, right, t_arr);
+        // 将临时数组里的结果拷回原数组
+        System.arraycopy(t_arr, left, nums, left, right - left + 1);
+    }
+
+    public void merge(int[] nums, int iLeft, int iRight, int jLeft, int jRight, int[] t_arr) {
+        int k = iLeft;
+        while (iLeft <= iRight && jLeft <= jRight) {
+            if (nums[iLeft] < nums[jLeft]) {
+                t_arr[k] = nums[iLeft];
+                iLeft++;
+            } else {
+                t_arr[k] = nums[jLeft];
+                jLeft++;
+            }
+            k++;
+        }
+        if (iLeft <= iRight) {
+            System.arraycopy(nums, iLeft, t_arr, k, iRight - iLeft + 1);
+        } else {
+            System.arraycopy(nums, jLeft, t_arr, k, jRight - jLeft + 1);
+        }
+    }
+
+    public void swap(int[] nums, int i, int j) {
+        nums[i] = nums[i] ^ nums[j];
+        nums[j] = nums[i] ^ nums[j];
+        nums[i] = nums[i] ^ nums[j];
+    }
 }
 ```
