--- a/src/main/java/com/itheima/algorithm/sort/排序.md
+++ b/src/main/java/com/itheima/algorithm/sort/排序.md
@@ -5,16 +5,18 @@
 - [3. 堆排序](#3-堆排序)
 - [4. 插入排序](#4-插入排序)
 - [5. 希尔排序](#5-希尔排序)
-- [归并排序](#归并排序)
-  - [递归：自顶向下](#递归自顶向下)
-  - [非递归实现：自底向上](#非递归实现自底向上)
-  - [递归实现+元素少时插入排序](#递归实现元素少时插入排序)
+- [6. 归并排序](#6-归并排序)
+  - [6.1. 递归：自顶向下](#61-递归自顶向下)
+  - [6.2. 非递归实现：自底向上](#62-非递归实现自底向上)
+  - [6.3. 递归实现+元素少时插入排序](#63-递归实现元素少时插入排序)
+- [快速排序](#快速排序)
 
 
 ---
 
 ```java
 public void swap(int[] nums, int i, int j) {
+    if(i == j) return;
     nums[i] = nums[i] ^ nums[j];
     nums[j] = nums[i] ^ nums[j];
     nums[i] = nums[i] ^ nums[j];
@@ -24,13 +26,13 @@ public void swap(int[] nums, int i, int j) {
 
 | 算法 |    最好    |    最坏    |    平均    |  空间   | 稳定 | 思想 |                           注意事项                           | 速度| 优化|
 | :--: | :--------: | :--------: | :--------: | :-----: | :--: | :--: | :----------------------------------------------------------: | :-:| :-:|
-| 冒泡 |    O(n)    |  O($n^2$)  |  O($n^2$)  |  O(1)   |  Y   | 比较 |  最好情况需要优化版本，而且是已经有序的数组 | 慢| x记录最后一次交换位置|
-| 选择 |  O($n^2$)  |  O($n^2$)  |  O($n^2$)  |  O(1)   |  N   | 比较 |交换次数一般少于冒泡                     | 慢|
+| 冒泡 |    O(n)    |  O($n^2$)  |  O($n^2$)  |  O(1)   |  Y   | 比较 |  最好情况需要优化版本，而且是已经有序的数组 |超时| x记录最后一次交换位置|
+| 选择 |  O($n^2$)  |  O($n^2$)  |  O($n^2$)  |  O(1)   |  N   | 比较 |交换次数一般少于冒泡                     | 超时|
 |  堆  | O($nlogn$) | O($nlogn$) | O($nlogn$) |  O(1)   |  N   | 选择 |                                 | 快|非递归下潜|
-| 插入 |    O(n)    |  O($n^2$)  |  O($n^2$)  |  O(1)   |  Y   | 比较 |最好情况是已经有序的数组                   | 慢|优化就是希尔排序|
+| 插入 |    O(n)    |  O($n^2$)  |  O($n^2$)  |  O(1)   |  Y   | 比较 |最好情况是已经有序的数组                   | 巨慢|优化就是希尔排序|
 | 希尔 |  O(nlogn)  |  O($n^2$)  | O($nlogn$) |  O(1)   |  N   | 插入 |                                 | 比堆排序还快| |
 | 归并 | O($nlogn$) | O($nlogn$) | O($nlogn$) |  O(n)   |  Y   | 分治 |需要额外的O(n)的存储空间 |比希尔排序还快||
-| 快速 | O($nlogn$) |  O($n^2$)  | O($nlogn$) | O(logn) |  N   | 分治 | 需要把枢轴值随机化来缓解最坏情况 ||
+| 快速 | O($nlogn$) |  O($n^2$)  | O($nlogn$) | O(logn) |  N   | 分治 | 需要把枢轴值随机化来缓解最坏情况 |巨慢|
 
 ## 1. 冒泡排序
 
@@ -44,7 +46,7 @@ public void swap(int[] nums, int i, int j) {
 ![alt text](../../../../../../../images/image-33.png)
 ```java
 public int[] sortArray(int[] nums) {
-    for (int i = nums.length - 1; i > 0; i--) {
+    for (int i = nums.length - 1; i >= 1; i--) {
         for (int j = 0; j < i; j++) {
             // 逆序
             if (nums[j] > nums[j + 1]) {
@@ -67,7 +69,7 @@ public int[] sortArray(int[] nums) {
 }
 
 public void sort(int[] nums, int i) {
-    if (i <= 0) {
+    if (i < 1) {
         return;
     }
     for (int j = 0; j < i; j++) {
@@ -86,7 +88,8 @@ public void sort(int[] nums, int i) {
 ![alt text](../../../../../../../images/image-34.png)
 ```java
 public int[] sortArray(int[] nums) {
-    for(int i = nums.length - 1; i > 0;){
+    // 让下一轮的 `i = x`
+    for(int i = nums.length - 1; i >= 1;){
         int x = 0;
         for(int j = 0 ; j < i; j++){
             if(nums[j] > nums[j+1]){
@@ -106,7 +109,7 @@ public int[] sortArray(int[] nums) {
 }
 
 public void sort(int[] nums, int i) {
-    if (i <= 0) {
+    if (i < 1) {
         return;
     }
     int x = 0;
@@ -134,7 +137,7 @@ public void sort(int[] nums, int i) {
 ```java
 public int[] sortArray(int[] nums) {
     // 默认最大元素的索引是i
-    for(int i = nums.length - 1; i > 1 ; i--){
+    for(int i = nums.length - 1; i >= 1; i--){
         int max = i;
         // 它之前的元素
         for(int j = 0 ; j < i; j++){
@@ -311,9 +314,9 @@ public int[] sortArray(int[] nums) {
 }
 ```
 
-## 归并排序
+## 6. 归并排序
 
-### 递归：自顶向下
+### 6.1. 递归：自顶向下
 
 ```
 [5,1,1,2,0,0]
@@ -362,7 +365,7 @@ public void merge(int[] nums, int iLeft, int iRight, int jLeft, int jRight, int[
 }
 ```
 
-### 非递归实现：自底向上
+### 6.2. 非递归实现：自底向上
 
 ```
 [5,1,1,2,0,0]
@@ -411,7 +414,7 @@ public void merge(int[] nums, int iLeft, int iRight, int jLeft, int jRight, int[
 }
 ```
 
-### 递归实现+元素少时插入排序
+### 6.3. 递归实现+元素少时插入排序
 
 元素少时插入排序，是在分裂中，而不是一开始判断数组用归并还是分裂。
 
@@ -479,5 +482,76 @@ class Solution {
         nums[j] = nums[i] ^ nums[j];
         nums[i] = nums[i] ^ nums[j];
     }
+}
+```
+
+## 快速排序
+
+1. 单边循环 Lomuto：巨慢
+2. 双边 j 先：巨慢
+3. 双边 i 先：慢
+
+```java
+public int[] sortArray(int[] nums) {
+    quick(nums, 0, nums.length - 1);
+    return nums;
+}
+
+public void quick(int[] nums, int left, int right) {
+    if (left >= right) {
+        return;
+    }
+    int p = partition(nums, left, right);
+    quick(nums, left, p - 1);
+    quick(nums, p + 1, right);
+}
+```
+* 选择最左侧元素作为基准点
+* j 找比基准点小于等于的，i 找比基准点大于的（大于等于的），一旦找到，二者进行交换
+  * i 从左向右
+  * j 从右向左
+* 最后基准点与 i 交换，j 即为基准点最终索引
+```java
+// 双边 j 先
+public int partition(int[] nums, int left, int right) {
+    int pv = nums[left];
+    int i = left;
+    int j = right;
+    while (i < j) {
+        // j找小于等于的
+        while (i < j && nums[j] > pv) {
+            j--;
+        }
+        // i找大于的：不等于是因为下一swap后ij不自增自减，i等于的交换给j，j等于就不进入while了。
+        while (i < j && nums[i] <= pv) {
+            i++;
+        }
+        swap(nums, i, j);
+    }
+    swap(nums, j, left);
+    return j;
+}
+```
+```java
+// 双边 i 先
+public int partition(int[] nums, int left, int right) {
+    int pv = nums[left];
+    int i = left + 1;
+    int j = right;
+    while (i <= j) {
+        while (i <= j && nums[i] < pv) {
+            i++;
+        }
+        while (i <= j && nums[j] > pv) {
+            j--;
+        }
+        if (i <= j) {
+            swap(nums, i, j);
+            i++;
+            j--;
+        }
+    }
+    swap(nums, j, left);
+    return j;
 }
 ```
