--- a/src/main/java/com/itheima/algorithm/sort/排序.md
+++ b/src/main/java/com/itheima/algorithm/sort/排序.md
@@ -9,7 +9,7 @@
   - [6.1. 递归：自顶向下](#61-递归自顶向下)
   - [6.2. 非递归实现：自底向上](#62-非递归实现自底向上)
   - [6.3. 递归实现+元素少时插入排序](#63-递归实现元素少时插入排序)
-- [快速排序](#快速排序)
+- [7. 快速排序](#7-快速排序)
 
 
 ---
@@ -485,7 +485,7 @@ class Solution {
 }
 ```
 
-## 快速排序
+## 7. 快速排序
 
 1. 单边循环 Lomuto：巨慢
 2. 双边 j 先：巨慢
