--- a/docs/背.md
+++ b/docs/背.md
@@ -20,7 +20,8 @@
   - [【排序】](#排序)
   - [插入排序的有序部分是头部还是尾部](#插入排序的有序部分是头部还是尾部)
   - [【树】](#树)
-  - [树的层序遍历用栈还是队列](#树的层序遍历用栈还是队列)
+  - [树的层序遍历、深度遍历用栈还是队列](#树的层序遍历深度遍历用栈还是队列)
+  - [树的深度遍历的规则](#树的深度遍历的规则)
   - [【图】](#图)
   - [BFD用栈还是队列](#bfd用栈还是队列)
 
@@ -98,9 +99,9 @@
 
 ## 【树】
 
-## 树的层序遍历用栈还是队列
+## 树的层序遍历、深度遍历用栈还是队列
 
-队列
+## 树的深度遍历的规则
 
 ## 【图】
 
