--- a/src/main/java/com/itheima/datastructure/binarytree/深度遍历.md
+++ b/src/main/java/com/itheima/datastructure/binarytree/深度遍历.md
@@ -1,3 +1,4 @@
+深度优先遍历分先序遍历、后序遍历、中序遍历
 ## 递归
 1. 穿入根节点
 2. 递归当前节点，非空就递归子节点。
@@ -17,12 +18,13 @@ class Solution {
 ## 栈
 
 - 一个栈，先不压入root
-- 循环条件：cur非空、栈不空
+- 循环条件：cur非空或栈不空
 - 当前非空，则处理当前的左子树：压栈、前序、更新至最左。
 - 当前树空，则看**栈顶元素的右子树**。没有右子树和右子树已经是pop，则弹栈更新pop；否则当前为右子树。
 - 前序是压入cur.val，中序是压入peek.val，后序是压入更新后的pop.val。
 
 ```java
+// 前、中、后
 class Solution {
     public List<Integer> preorderTraversal(TreeNode root) {
         List<Integer> list = new LinkedList<>();
@@ -60,6 +62,7 @@ class Solution {
 }
 ```
 ```java
+// 前中
 class Solution {
     public List<Integer> inorderTraversal(TreeNode root) {
         List<Integer> res = new LinkedList<>();
