--- a/src/main/java/com/itheima/datastructure/graph/最短距离.md
+++ b/src/main/java/com/itheima/datastructure/graph/最短距离.md
@@ -84,6 +84,10 @@ for (int i = he[cur]; i != 0; i = ne[i]) {
 
 # 2. 最短路径
 
+**无权最短路径问题** 用 BFS 求解就行了。
+
+下面都是**带权最短路径问题**
+
 Dijkstra（单源）：贪心，处理所有顶点，但不处理所有边。不能处理负边。
 
 Bellman-Ford（单源）：处理所有边。处理负边，但不能处理负环。
@@ -100,6 +104,10 @@ Floyd（多源）：处理所有顶点，嵌套。处理负边，但不能处理
 检测负环：只有Bellman-Ford。
 
 ## 2.1. Dijkstra
+
+![alt text](../../../../../../../images/image-43.png)
+* Dijkstra贪心，出问题是因为认为本次已经找到了该顶点的最短路径，下次不会再处理它（curr.visited = true）。所有负边存在时，就不会再考虑它。
+* 与之对比，Bellman-Ford 并没有考虑局部距离最小的顶点，而是每次都处理所有边，所以不会出错，当然效率不如 Dijkstra
 ### 2.1.1. 邻接矩阵
 邻接矩阵 w + vis + dist
 
@@ -107,7 +115,7 @@ Floyd（多源）：处理所有顶点，嵌套。处理负边，但不能处理
    - 访问：将节点分为「未遍历节点」和「已遍历节点」，一开始所有节点都未访问。
    - 距离：起始节点的距离是0，其他都是INF
 2. 选择未访问且距离最小的节点作为当前节点：
-   - 松弛操作，更新对其他的节点的距离：`dist[i] = min(dist[i], dist[cur] + w[cur][i])`
+   - 松弛操作，更新对未访问过的相邻节点的距离：`dist[i] = min(dist[i], dist[cur] + w[cur][i])`
    - 标记当前节点为已访问（所以N个节点N轮）
 
 ```java
@@ -121,10 +129,10 @@ class Solution {
 
     // 直接用k，第一个节点就是索引1.
     public int networkDelayTime(int[][] times, int n, int k) {
+        // 权：注意题目中有些权为0
         for(int[] wi: w){
             Arrays.fill(wi, -1);
         }
-        // 权：注意有些权为0
         for (int[] time : times) {
             w[time[0]][time[1]] = time[2];
         }
@@ -165,12 +173,12 @@ class Solution {
             // 更新当前节点的相邻节点的距离
             for (int i = 1; i <= n; i++) {
                 // 有的权是0，不连接是-1
-                if(w[cur][i] >= 0){
+                if(!vis[i] && w[cur][i] >= 0){
                     dist[i] = Integer.min(dist[i], dist[cur] + w[cur][i]);
                 }
             }
             // for (int i = 1; i <= n; i++) {
-            //     if(w[cur][i] >= 0 && dist[cur] + w[cur][i] < dist[i] ){
+            //     if(!vis[i] && w[cur][i] >= 0 && dist[cur] + w[cur][i] < dist[i] ){
             //         dist[i] = dist[cur] + w[cur][i];
             //     }
             // }
