--- a/src/main/java/com/itheima/algorithm/dynamicprogramming/动态规划.md
+++ b/src/main/java/com/itheima/algorithm/dynamicprogramming/动态规划.md
@@ -36,3 +36,10 @@
 因为都是同一行，所以不需要初始化第一行。
 
 ![alt text](../../../../../../../images/image-52.png)
+
+
+
+## 总结
+
+- 二维简化为一维：如果依赖旧的，就倒序。
+- 初始化而跳过预备元素：[初始化而跳过预备元素](<leetcode/198. 打家劫舍.md>)
