--- a/src/main/java/com/itheima/datastructure/heap/1.md
+++ b/src/main/java/com/itheima/datastructure/heap/1.md
@@ -1,6 +1,6 @@
 ## 堆
 
-根据 root 根节点来命名：
+**大顶堆堆顶最小，小顶堆堆顶最大**。
 * 在大顶堆中，任意节点 C 与它的父节点 P 符合 $P.value \geq C.value$
 * 而小顶堆中，任意节点 C 与它的父节点 P 符合 $P.value \leq C.value$
 
